--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,8 +19,7 @@ website:
 
 format:
   html:
-    theme:
-      - cosmo
-      - brand
+    theme: cosmo
     css: styles.css
     math: mathjax
+    title-block-banner: true
